<resources>
    <string name="app_name">Final Project</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_string">Choose 3 or more artists you like</string>
    <string name="svArtist">Search</string>
    <string name="emailText">What’s your email?</string>
    <string name="passwordText">Create a password</string>
    <string name="nameText">What’s your name?</string>
    <string name="tvTextName">This appears on your spotify profile</string>
    <string name="genderText">What’s your gender?</string>
    <string name="accountText">Create account</string>
    <string name="tvEmailText">You’ll need to confirm this email later.</string>
    <string name="buttonText">Next</string>
    <string name="tvPasswordText">Use at least 8 characters.</string>
    <string name="buttonNameText">Create an account</string>
    <string name="cv1First">By tapping on “Create account”, you agree to the spotify Terms of Use.</string>
    <string name="cv1Second">Terms of Use</string>
    <string name="cv1Third">To learn more about how Spotify collect, uses,
        shares and protects your personal data, Please see the Spotify Privacy Policy.</string>
    <string name="cv2First">Privacy Policy</string>
    <string name="cv2Second">Please send me news and offers from Spotify.</string>
    <string name="cv2Third">Share my registration data with Spotify’s content providers for marketing purposes.</string>
    <string name="todo">TODO</string>
    <string name="tv_Spotify">Millions of Songs. Free on Spotify.</string>
    <string name="but_Login">Sign up free</string>
    <string name="but_log_in">Log in</string>
    <string name="log_in_to_spotify">Log in to Spotify</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="tvpodcasts">Now choose albums.</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_your_library">Your Library</string>
    <string name="tvsearch">Search</string>
    <string name="svcancel">Cancel</string>
    <string name="artists_button">Done</string>
    <string name="tvAlbums">Choose album</string>
    <string name="tvHome">Artists and Albums you choose</string>
    <string name="tvHomeArtist">artist</string>
    <string name="List2_album">Album</string>
    <string name="list2_artist">Artist</string>
    <string name="tv_album">Album</string>
    <string name="tbClose">Close</string>
    <string name="tv_go">Go to radio</string>
    <string name="tvadd_to">Add to queue</string>
    <string name="tvadd">Add to playlist</string>
    <string name="tvlike_all">Like all songs</string>
    <string name="tvShare">Share</string>
    <string name="tvview_artist">View Artist</string>
    <string name="tvlike">Like</string>
    <string name="motion_beatspill">BEATSPILL+</string>
    <string name="track_share">Share</string>
    <string name="track_copy_link">Copy Link</string>
    <string name="track_whatsapp">Whatsapp</string>
    <string name="track_twitter">Twitter</string>
    <string name="track_message">Message</string>
    <string name="track_more">More</string>
    <string name="tv_view_album">View album</string>
    <string name="tv_view_artist">View artist</string>
    <string name="tv_song_credits">Song credits</string>
    <string name="tv_sleep_timer">Sleep timer</string>
    <string name="tv_your_library">Your Library</string>
    <string name="btn_artist">Artist</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_album">Album</string>
    <string name="tab_playlists">Songs</string>
    <string name="tab_podcasts">Podcasts</string>
    <string name="library_recently_played">Recently played</string>
    <string name="song_song">Song</string>
    <string name="library_liked_songs">Liked Songs</string>
    <string name="setting_settings">Settings</string>
    <string name="settings_view_profile">View Profile</string>
    <string name="storage">Storage</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="voice_assistant_amp_apps"><![CDATA[Voice Assistant & Apps]]></string>
    <string name="social">Social</string>
    <string name="car">Car</string>
    <string name="devices">Devices</string>
    <string name="explicit_content">Explicit Content</string>
    <string name="playback">Playback</string>
    <string name="languages">Languages</string>
    <string name="data_saver">Data Saver</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="playlists">PLAYLISTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="playlists1">Playlists</string>
    <string name="shazam">Shazam</string>
    <string name="_7_likes">7 likes</string>
    <string name="see_all_playlists">See all playlists</string>
    <string name="study">Study</string>
    <string name="roadTrip">Roadtrip</string>
    <string name="artists"> You can choose artists</string>
    <string name="album_size">Album size : </string>
    <string name="hide">Hide</string>
    <string name="name">name :</string>
    <string name="edit">Edit Profile</string>
    <string name="save">Save</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="listening_on">Listening On</string>
    <string name="select_a_device">Select a device</string>
    <string name="bravia_4k_gb">BRAVIA 4K GB</string>
    <string name="google_cast">Google Cast</string>
    <string name="momitha_s_macbook_pro">Momitha’s MacBook Pro</string>
    <string name="airplay_or_bluetooth">Airplay or Bluetooth</string>
    <string name="start_a_group_session">Start a Group Session</string>
    <string name="listen_with_friends_in_real_time_pick_what_to_play_and_control_the_music_together">Listen with friends, in real time. Pick what to play and control the music together.</string>
    <string name="beta">BETA</string>
    <string name="start_session">Start Session</string>
    <string name="scan_to_join">Scan to join</string>
    <string name="point">Point your camera at a Spotify code.</string>
    <string name="select">Select from photos</string>
    <string name="log_out">Log out</string>

</resources>



