<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.albumsfragment.fragment.AlbumControlFragment"
    >


    <ImageView
        android:id="@+id/ivAlbumControl"
        android:layout_width="165dp"
        android:layout_height="165dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="21dp"
        android:layout_marginHorizontal="132dp"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:id="@+id/tvAlbumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/tvsearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAlbumControl"
        app:layout_constraintBottom_toTopOf="@+id/tvArtistsName"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tvArtistsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bbColor"
        android:textSize="14sp"
        android:text="@string/tvsearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumName"
        android:layout_marginTop="15dp"
        />


    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvlike"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistsName"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlArtist"
        app:drawableStartCompat="@drawable/ic_heart"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="35dp"
        />

    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvview_artist"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlLike"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlShare"
        app:drawableStartCompat="@drawable/ic_view_artists"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>



    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvshare"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlArtist"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlLikeAll"
        app:drawableStartCompat="@drawable/ic_share"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>

    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlLikeAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvlike_all"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlShare"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlAdd"
        app:drawableStartCompat="@drawable/ic_heart"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>

    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvadd"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlLikeAll"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlAddTo"
        app:drawableStartCompat="@drawable/ic_add"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>

    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlAddTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tvadd_to"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlAdd"
        app:layout_constraintBottom_toTopOf="@id/tvAlbumControlGo"
        app:drawableStartCompat="@drawable/ic_add_to"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>

    <TextView
        android:paddingStart="45dp"
        android:id="@+id/tvAlbumControlGo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tv_go"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumControlAddTo"
        app:drawableStartCompat="@drawable/ic_go"
        android:drawablePadding="15dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="23dp"/>


    <TextView
        android:id="@+id/tbClose"
        android:layout_width="52dp"
        android:layout_height="29dp"
        android:textSize="16sp"
        android:text="@string/tbClose"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>