<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.loginfragments.viewmodel.LogInFragment">

<ImageView
    android:id="@+id/ivLogin"
    android:layout_width="411dp"
    android:layout_height="350dp"
    android:src="@mipmap/ic_launch"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="10dp"
    android:contentDescription="@string/todo" />
    
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="246dp"
        android:layout_height="84dp"
        android:text="@string/tv_Spotify"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"
        android:layout_marginHorizontal="91dp"
        />
    
    
    <Button
        android:id="@+id/butLogin"
        android:layout_width="337dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/grey"
        android:text="@string/but_Login"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="45dp"
        />


    <Button
        android:id="@+id/butLogin1"
        android:layout_width="337dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/background"
        android:text="@string/but_log_in"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/butLogin"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="45dp"
        />
        




</androidx.constraintlayout.widget.ConstraintLayout>