<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbBack"
        style="@style/IconOnly"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@drawable/artists"
        app:icon="@drawable/ic_back"
        app:iconPadding="-17dp"
        app:iconTint="@color/bbColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Circle" />


    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="138dp"
        android:text="@string/accountText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mbBack"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvName"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="207dp"
        android:text="@string/nameText"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccount" />


    <EditText
        android:id="@+id/etRegistration"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittextcorner"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />


    <TextView
        android:id="@+id/tvTextName"
        android:layout_width="150dp"
        android:layout_height="11dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="252dp"
        android:text="@string/tvTextName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegistration" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="362dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="@color/bbColor"
        app:layout_constraintBottom_toTopOf="@id/tvLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegistration" />

    <LinearLayout
        android:id="@+id/tvLayout1"
        android:layout_width="333dp"
        android:layout_height="98dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tvLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:text="@string/cv1First"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="11dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="21dp"
            android:text="@string/cv1Second"
            android:textColor="@color/grey"
            android:textSize="10sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/cv1Third"
            android:textColor="@color/white"
            android:textSize="10sp" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/tvLayout2"
        android:layout_width="310dp"
        android:layout_height="115dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="78dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLayout1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:text="@string/cv2First"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="11dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="34dp"
            android:text="@string/cv2Second"
            android:textColor="@color/white"
            android:textSize="10sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/cv2Third"
            android:textColor="@color/white"
            android:textSize="10sp" />


    </LinearLayout>



    <RadioButton
        android:id="@+id/rb2Name"
        android:layout_width="26dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toEndOf="@id/tvLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rb1Name"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        />


    <RadioButton
        android:id="@+id/rb1Name"
        android:layout_width="26dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@id/tvLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLayout2"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="7dp"/>



    <Button
        android:id="@+id/buttonAccount"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:layout_marginStart="134dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="133dp"
        android:backgroundTint="@color/white"
        android:text="@string/buttonNameText"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>